Updated runtime things for Java 11